[gd_scene load_steps=7 format=3 uid="uid://dux152y161bjx"]

[ext_resource type="Script" path="res://Scale_Shooter/Scripts/Projectiles/projectile.gd" id="1_t6d8y"]
[ext_resource type="Texture2D" uid="uid://d2h3vqn4fmldl" path="res://Scale_Shooter/AssetLib/Graphics/Projectiles/laser-right.png" id="1_x17gi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mv0j4"]
radius = 7.0

[sub_resource type="Animation" id="Animation_uy8ue"]
resource_name = "LaserShoot"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LaserMoving:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01, 0.02, 0.03, 0.04),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 3, 6, 8, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LaserMoving:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.045),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LaserImage:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.045),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_s384c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LaserMoving:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ui7s8"]
_data = {
"LaserShoot": SubResource("Animation_uy8ue"),
"RESET": SubResource("Animation_s384c")
}

[node name="Projectile" type="Area2D"]
position = Vector2(24, -3)
collision_layer = 16
collision_mask = 11
script = ExtResource("1_t6d8y")

[node name="LaserMoving" type="Sprite2D" parent="."]
texture = ExtResource("1_x17gi")
hframes = 11
frame = 6

[node name="LaserImage" type="Sprite2D" parent="."]
visible = false
position = Vector2(-1, 0)
texture = ExtResource("1_x17gi")
hframes = 11
frame = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5, 0)
shape = SubResource("CircleShape2D_mv0j4")

[node name="Timers" type="Node2D" parent="."]

[node name="DestroyTimer" type="Timer" parent="Timers"]
wait_time = 0.35
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ui7s8")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="laser_has_collided" from="." to="." method="_on_laser_has_collided"]
